# chronic-risk-xai

./: .gitignore  CITATION.cff  Makefile  README.md  environment.yml  pyproject.toml  reqd_libraries_incase.txt  requirements.txt
.devcontainer/: devcontainer.json
configs/: default.yaml  framingham.yaml
data/: README.md
data/sample/: sample.csv
models/artifacts/: lgbm.joblib  logreg.joblib  meta.json  xgb.joblib
models/reports/: metrics.json  optuna_summary.json  optuna_trials.csv  summary.csv  summary.json
models/reports/lgbm/: metrics.json
models/reports/logreg/: metrics.json
models/reports/rf/: metrics.json
models/reports/xgb/: metrics.json
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_cards.ipynb
src/chronic_risk/: api.py  dashboard.py  data.py  evaluate.py  explain.py  fairness.py  features.py  modeling.py  train.py  utils.py
src/chronic_risk/sql/: queries.sql  runner.py
src/chronic_risk_xai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cli/: launch_dashboard.py  prepare_data.py  run_experiment.py  run_explain.py  serve_api.py
tests/: test_api.py  test_dashboard.py  test_data.py  test_features.py  test_modeling.py
