[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronic-risk-xai"
version = "1.0.0"
description = "End-to-end, reproducible pipeline for chronic disease risk with XAI, HPO, fairness, Streamlit, and FastAPI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name="Pukhrambam Akash Singh", email="elearning.apu@gmail.com"}]
dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B","C4","SIM"]
ignore = []
exclude = ["notebooks/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = [
  "tests"
]
